--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ app.*.symbols
 
 # Obfuscation related
 app.*.map.json
+
+# Firebase
+android/app/google-services.json
+ios/Runner/GoogleService-Info.plist
+
